Ajout nouvelles fonctions + rename + modif scss

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="fr">
   <head>
@@ -124,7 +124,7 @@
 
 
     <!-- JavaScript -->
-    <script src="./js/furnitures.js"></script>
+    <script src="./js/items.js"></script>
     <script src="./js/index.js"></script>
     <!-- jQuery, Popper.js, Bootstrap JS -->
 
