--- a/pages_html/produit.html
+++ b/pages_html/produit.html
@@ -71,6 +71,10 @@
             <h1 class="text-center mb-3">Fiche produit détaillée</h1>
         <!--Insertion des produits-->
         </div>
+        <div class="text-center mb-5">
+            <a class="btn btn-dark mt-3 mx-5" href="../index.html"><i class="far fa-arrow-alt-circle-left"></i> Poursuivre mes achats</a>
+            <a class="btn btn-dark mt-3 mx-5" href="panier.html">Voir mon panier <i class="far fa-arrow-alt-circle-right"></i></a>
+        </div>
     </section>
  
 <!--FOOTER-->    
@@ -99,8 +103,8 @@
 
 
     <!-- JavaScript -->
-    <script src="../js/furnitures.js"></script>
-    <script src="../js/produit.js"></script>
+    <script src="../js/items.js"></script>
+    <script src="../js/pageproduit.js"></script>
     <!-- jQuery, Popper.js, Bootstrap JS -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
