--- a/pages_html/confirmation.html
+++ b/pages_html/confirmation.html
@@ -38,31 +38,29 @@
 <!--BARRE NAVIGATION-->
   <body>
     <header class="border-bottom shadow-sm">
-        <div class="container">
-            <div class="row">
-                <nav class="col-8 navbar navbar-expand navbar-light">
-                    <a class="navbar-brand" href="index.html">
-                        Orinoco <i class="fas fa-chair"></i>
-                    </a>
-                    <div id="navbarContent" class="collapse navbar-collapse">
-                       <ul class="navbar-nav">
-                          <li class="nav-item active">
-                             <a class="nav-link text-dark" href="../index.html">Accueil</a>
-                          </li>
-                          <li class="nav-item">
-                             <a class="nav-link text-dark" href="../index.html">Produits</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-dark"  href="mailto:orinoco@gmail.com">Contact</a>
-                         </li>
-                       </ul>
-                    </div>
-                 </nav>
-                 <div class="col-4 navbar navbar-expand-lg navbar-light navBasket">
-                    <a class="nav-link text-dark" href="./panier.html">Mon panier <i class="fas fa-shopping-basket"></i></a>
-                 </div>
+        <nav class="navbar navbar-expand-md navbar-light">
+            <a class="navbar-brand" href="index.html">Orinoco <i class="fas fa-chair"></i></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+                    
+            <div id="navbarContent" class="collapse navbar-collapse">     
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link text-dark" href="index.html">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="#produits">Produits</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark"  href="mailto:orinoco@gmail.com">Contact</a>
+                    </li>
+                    <li class="nav-item cart">
+                        <a class="nav-link text-dark" href="./panier.html">Mon panier <i class="fas fa-shopping-basket"></i> <span></span></a>
+                    </li>
+                </ul>                                  
             </div>
-        </div>
+        </nav>            
     </header>
 
 <!--ARTICLES-->
