--- a/pages_html/panier.html
+++ b/pages_html/panier.html
@@ -4,8 +4,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Onorico : trouver le meuble en chêne qui vous convient avec un large choix de vernis.">
+    <meta name="description" content="Orinoco : trouver le meuble en bois qui vous convient avec un large choix de vernis.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robot" content="index, follow">
 
@@ -13,23 +12,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/19555fa88c.js" crossorigin="anonymous"></script>
    
-        <!-- Bootstrap CSS -->
-    <title>Onorico - Panier</title>
+    <title>Orinoco - Panier</title>
 
     <!-- Balises réseaux sociaux -->
     <!-- Balises Facebook -->
-		<meta property="og:title" content="Onorico"/>
+		<meta property="og:title" content="Orinoco"/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="http://onorico.com"/>
-		<meta property="og:description" content="Vente en ligne de meubles en chêne"/>
+		<meta property="og:url" content="http://Orinoco.com"/>
+		<meta property="og:description" content="Vente en ligne de meubles en bois"/>
 		<meta property="og:image" content=""/>
 
 	<!-- Balises Twitter -->
 		<meta name="twitter:card" content="summary_large_image"/>
-		<meta name="twitter:title" content="Onorico"/>
-		<meta name="twitter:site" content="@onorico"/>
-		<meta name="twitter:creator" content="@onorico"/>
-		<meta name="twitter:description" content="Vente en ligne de meubles en chêne"/> 
+		<meta name="twitter:title" content="Orinoco"/>
+		<meta name="twitter:site" content="@Orinoco"/>
+		<meta name="twitter:creator" content="@Orinoco"/>
+		<meta name="twitter:description" content="Vente en ligne de meubles en bois"/> 
 		<meta name="twitter:image" content=""/>
 
   </head>
@@ -48,16 +46,16 @@
             <div id="navbarContent" class="collapse navbar-collapse">     
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link text-dark" href="index.html">Accueil</a>
+                        <a class="nav-link text-dark" href="../index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#produits">Produits</a>
+                        <a class="nav-link text-dark" href="../index.html">Produits</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark"  href="mailto:orinoco@gmail.com">Contact</a>
                     </li>
                     <li class="nav-item cart">
-                        <a class="nav-link text-dark" href="./panier.html">Mon panier <i class="fas fa-shopping-basket"></i> <span></span></a>
+                        <a class="nav-link text-dark" href="panier.html">Mon panier <i class="fas fa-shopping-basket"></i> <span></span></a>
                     </li>
                 </ul>                                  
             </div>
@@ -72,7 +70,7 @@
         </div>
             <!--Boutons pour soit revenir à la page d'accueil, soit valider le panier et accéder au formulaire-->
         <div class="text-center mb-3">
-            <h5 id="totalCost" class="border-top border-bottom totalCost bold"></h5>  
+            <h3 id="totalCost" class="border-top border-bottom totalCost bold"></h3>  
             <a class="btn btn-dark mt-3 mx-5" href="../index.html"><i class="far fa-arrow-alt-circle-left"></i> Poursuivre mes achats</a>
             <button id="deleteCart" class="btn btn-dark mt-3 mx-5">Vider mon panier <i class="far fa-trash-alt"></i></button>
             <a id="btnForm" class="btn btn-dark mt-3 mx-5" href="#formulaire">Valider ma commande <i class="far fa-check-circle"></i></a>
@@ -82,7 +80,7 @@
         <!--Insertion du formulaire de commande si le bouton "valider la commande" est cliqué -->
         
     </div>
-</section>
+    </section>
 
 
  
