Finalisation html head

--- a/pages_html/panier.html
+++ b/pages_html/panier.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-
+<!doctype html>
 <html lang="fr">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="description" content="Orinoco : trouver le meuble en bois qui vous convient avec un large choix de vernis.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="robot" content="index, follow">
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="Orinoco : trouver le meuble en bois qui vous convient avec un large choix de vernis.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+        <meta name="robot" content="index, follow">
 
-    <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/19555fa88c.js" crossorigin="anonymous"></script>
-   
-    <title>Orinoco - Panier</title>
+    <!-- Styles -->
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/19555fa88c.js" crossorigin="anonymous"></script>
 
     <!-- Balises réseaux sociaux -->
     <!-- Balises Facebook -->
@@ -30,12 +27,12 @@
 		<meta name="twitter:description" content="Vente en ligne de meubles en bois"/> 
 		<meta name="twitter:image" content=""/>
 
-  </head>
+        <title>Orinoco - Panier</title>
+    </head>
 <!--BODY-->
 
-
 <!--BARRE NAVIGATION-->
-  <body>
+<body>
     <header class="border-bottom shadow-sm">
         <nav class="navbar navbar-expand-md navbar-light">
             <a class="navbar-brand" href="index.html">Orinoco <i class="fas fa-chair"></i></a>
@@ -75,11 +72,10 @@
             <button id="deleteCart" class="btn btn-dark mt-3 mx-5">Vider mon panier <i class="far fa-trash-alt"></i></button>
             <a id="btnForm" class="btn btn-dark mt-3 mx-5" href="#formulaire">Valider ma commande <i class="far fa-check-circle"></i></a>
         </div>
-            
-    <div id="containerFormulaire" class="text-center">
-        <!--Insertion du formulaire de commande si le bouton "valider la commande" est cliqué -->
-        
-    </div>
+        <!--Formulaire -->
+        <div id="containerFormulaire" class="text-center">
+            <!--Insertion du formulaire de commande si le bouton "valider la commande" est cliqué -->      
+        </div>
     </section>
 
 
