--- a/pages_html/confirmation.html
+++ b/pages_html/confirmation.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-
+<!doctype html>
 <html lang="fr">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="description" content="Orinoco : trouver le meuble en bois qui vous convient avec un large choix de vernis.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="robot" content="index, follow">
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="Orinoco : trouver le meuble en bois qui vous convient avec un large choix de vernis.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+        <meta name="robot" content="index, follow">
 
-    <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/19555fa88c.js" crossorigin="anonymous"></script>
-   
-    <title>Orinoco - Confirmation</title>
+    <!-- Styles -->
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/19555fa88c.js" crossorigin="anonymous"></script>
 
     <!-- Balises réseaux sociaux -->
     <!-- Balises Facebook -->
@@ -30,11 +27,12 @@
 		<meta name="twitter:description" content="Vente en ligne de meubles en bois"/> 
 		<meta name="twitter:image" content=""/>
 
-  </head>
+        <title>Orinoco - Confirmation</title>
+    </head>
 <!--BODY-->
 
 <!--BARRE NAVIGATION-->
-  <body>
+<body>
     <header class="border-bottom shadow-sm">
         <nav class="navbar navbar-expand-md navbar-light">
             <a class="navbar-brand" href="index.html">Orinoco <i class="fas fa-chair"></i></a>
@@ -62,17 +60,20 @@
     </header>
 
 <!--ARTICLES-->
-    <div class="container text-center my-3">
-        <div class="row ">
-            <h1>Récapitulatif de commande</h1>
-            <p>Merci pour votre commande. Elle a bien été validée par notre serveur et sera traitée dans les plus brefs délais</p>
+    <section>
+        <div class="container text-center my-3">
+            <div class="row ">
+                <h1>Récapitulatif de commande</h1>
+                <p>Merci pour votre commande. Elle a bien été validée par notre serveur et sera traitée dans les plus brefs délais</p>
+            </div>
+            <!--Zone d'insertion des informations relatives à la commande-->
+            <div class="row">
+                <p id="totalCommande"></p>
+                <p id="identifiantClient"></p>
+            </div>
+            <button class="btn btn-dark" id="resetStorage">Terminer</button>
         </div>
-        <div class="row">
-            <p id="totalCommande"></p>
-            <p id="identifiantClient"></p>
-        </div>
-        <button class="btn btn-dark" id="resetStorage">Terminer</button>
-    </div>
+    </section>
 
  
 <!--FOOTER-->    
