--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
                 <div class="row mb-3">
                     <div class="col">
                         <label for="searchInput">Rechercher <i class="fas fa-search"></i></label>
-                            <input class="form-control" id="searchInput" type="text" placeholder="...">
+                            <input class="form-control" id="searchInput" type="text" placeholder="Entrez votre recherche">
                     </div>
                 </div>
-    <!--Hero Section-->
+    <!--Carousel-->
                 <div id="carouselControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="images/background-horizontal-dark-wood-c1.png" class="d-block w-100" alt="...">
+                            <img src="images/background-horizontal-dark-wood-c1.png" class="d-block w-100" alt="Image souhaitant la bienvenue sur le site">
                          </div>
                         <div class="carousel-item">
-                            <img src="images/background-horizontal-dark-wood-c2.png" class="d-block w-100" alt="...">
+                            <img src="images/background-horizontal-dark-wood-c2.png" class="d-block w-100" alt="Image invitant à trouver son meulbe parmi la sélection du site">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
